# Copyright 2022 Miguel Young de la Sota
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "boxy"
version = "0.1.0"
edition = "2021"

authors = ["Miguel Young de la Sota <mcyoung@mit.edu>"]
description = "Declarative builder for Unicode box-drawing characters"

homepage = "https://github.com/mcy/boxy"
repository = "https://github.com/mcy/boxy"
keywords = ["unicode", "no_std", "tui"]

license = "Apache-2.0"
